--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 /sources/runtime-manager/debugger-nub/stubs/
 /sources/runtime-manager/debugger-nub/x86-win32/devnub.lib
 /sources/runtime-manager/debugger-nub/x86-win32/*.obj
+/sources/corba/tests/idl/protocol/
+/sources/corba/tests/idl/skeletons/
+/sources/corba/tests/idl/stubs/
