corba: Update and fix the CORBA demos
* sources/corba/demos/bank/bank-client/module.dylan
  (module bank-client): Fix a missing import of the file-system
   module.

* sources/corba/demos/pente/module.dylan
  (module pente): Fix a missing import of the format module.

* sources/registry/generic/bank-{client,server,protocol,skeletons,stubs}: Add.

* sources/registry/generic/chat-{client,server,protocol,skeletons,stubs}: Add.

* sources/registry/generic/corba-hello-world-{client,server}: Add.
* sources/registry/generic/hello-{protocol,skeletons, stubs}: Add.

* sources/registry/generic/naming-client: Add.

* sources/registry/generic/corba-pente: Add.

* sources/registry/generic/pente-{protocol,skeletons,stubs}: Add.

* .gitignore: Ignore generated projects for demo IDLs.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,18 @@
 /sources/corba/services/naming/naming-protocol/
 /sources/corba/services/naming/naming-skeletons/
 /sources/corba/services/naming/naming-stubs/
+/sources/corba/demos/bank/bank/protocol/
+/sources/corba/demos/bank/bank/skeletons/
+/sources/corba/demos/bank/bank/stubs/
+/sources/corba/demos/chat/protocol/
+/sources/corba/demos/chat/skeletons/
+/sources/corba/demos/chat/stubs/
+/sources/corba/demos/corba-hello-world/protocol/
+/sources/corba/demos/corba-hello-world/skeletons/
+/sources/corba/demos/corba-hello-world/stubs/
+/sources/corba/demos/pente/protocol/
+/sources/corba/demos/pente/skeletons/
+/sources/corba/demos/pente/stubs/
 /sources/app/llvm-tablegen/tablegen-parser.dylan
 /sources/jamfiles/Makefile
 /sources/jamfiles/config.jam
