run-time: Add AArch64 support
* sources/lib/run-time/Makefile.in
  (PLATFORM_CFLAGS, PLATFORM_LFLAGS): Add aarch64-linux case.

* sources/lib/run-time/llvm-exceptions.c
  (SetIP): Add OPEN_DYLAN_ARCH_AARCH64 case for modifying signal
   context to simulate a call.
  (EstablishDylanExceptionHandlers): Only install a SIGSEGV handler
   on X86 platforms, not on AArch64.

--- a/sources/lib/run-time/Makefile.in
+++ b/sources/lib/run-time/Makefile.in
@@ -61,6 +61,11 @@ else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),arm-linux)
     -DOPEN_DYLAN_PLATFORM_LINUX -DOPEN_DYLAN_PLATFORM_UNIX \
     -DOPEN_DYLAN_ARCH_ARM
   PLATFORM_LFLAGS=-fPIC
+else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),aarch64-linux)
+  PLATFORM_CFLAGS=-fPIC -D_REENTRANT=1 -D_GNU_SOURCE \
+    -DOPEN_DYLAN_PLATFORM_LINUX -DOPEN_DYLAN_PLATFORM_UNIX \
+    -DOPEN_DYLAN_ARCH_AARCH64
+  PLATFORM_LFLAGS=-fPIC
 else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),x86-freebsd)
   PLATFORM_CFLAGS=-m32 -D_REENTRANT=1 \
     -DOPEN_DYLAN_PLATFORM_FREEBSD -DOPEN_DYLAN_PLATFORM_UNIX \
