config: Add aarch64-linux support
This change adds build configuration support for the aarch64-linux
platform.

* configure.ac: Detect AArch64 Linux platforms, and note that LLVM is
  supported.

* config/llvm/aarch64-linux.bc: New bitcode file used for
  testing aarch64-linux code generation.

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,10 @@ case $host in
   arm-*-linux*)
       OPEN_DYLAN_TARGET_PLATFORM=arm-linux;
     ;;
+  aarch64-*-linux*)
+      OPEN_DYLAN_TARGET_PLATFORM=aarch64-linux;
+      SUPPORT_LLVM=yes
+    ;;
   i*86-*-netbsd*)
       OPEN_DYLAN_TARGET_PLATFORM=x86-netbsd;
     ;;
