jamfiles: Support coppying needed runtime libraries
This change supports copying needed runtime libraries from a binary
distribution into the build directory. This allows Open Dylan to use a
version of the garbage collector or libunwind included with the
release rather than relying on system-installed versions.

* sources/jamfiles/config.jam.in: Provide a default value for the
  RTLIBS_INSTALL variable.

* sources/jamfiles/posix-build.jam
  (rule DylanLibrary): When compiling the dylan library, make local
   copies of the RTLIBS_INSTALL libraries and depend on them.

--- a/sources/jamfiles/config.jam.in
+++ b/sources/jamfiles/config.jam.in
@@ -11,6 +11,8 @@ C++FLAGS          ?= $(CCFLAGS) ;
 
 LIBS              ?= @LIBS@ ;
 
+RTLIBS_INSTALL    ?= ;
+
 MPS_CFLAGS        ?= @MPS_CFLAGS@ -DGC_USE_MPS ;
 MPS_LIBS          ?= @MPS_LIBS@ ;
 BDW_GC_CFLAGS     ?= @BDW_GC_CFLAGS@ -DGC_THREADS -DGC_USE_BOEHM ;
