Add support for the riscv64-linux platform
* configure.ac: Support riscv64-linux as a target platform.

* config/llvm/riscv64-linux.bc: Include an LLVM test bitcode file for
  the riscv64-linux platform.

* sources/jamfiles/riscv64-linux-build.jam: New riscv64-linux default
  build script.

* sources/jamfiles/Makefile.in: Install the new riscv64-linux default
  build script.

* sources/dfmc/llvm-back-end/llvm-targets.dylan
  (<llvm-riscv64-back-end>): New LLVM back-end subclass for
   64-bit RISC-V target platforms.
  (back-end-word-size on <llvm-riscv64-back-end>,
   llvm-back-end-data-layout on <llvm-riscv64-back-end>,
   llvm-back-end-unwind-exception-size on <llvm-riscv64-back-end>,
   llvm-back-end-unwind-exception-alignment on <llvm-riscv64-back-end>):
   New architecture-specific strategy methods.
  (<llvm-riscv64-linux-back-end>): New concrete back-end class for
   the riscv64-linux target.
  (llvm-back-end-target-triple on <llvm-riscv64-linux-back-end>): New
   strategy method for the RISC-V 64-bit Linux back-end.
  (llvm-back-end-calling-convention-fast on
   <llvm-riscv64-linux-back-end>): New method to override the calling
   convention so that fastcc is not used across modules on
   riscv64-linux.

* sources/lib/run-time/Makefile.in
  (PLATFORM_CFLAGS, PLATFORM_LFLAGS): Add aarch64-linux case.

* sources/lib/run-time/llvm-exceptions.c
  (SetIP): Emulate a call from the exception location to the PC
   value for the exception handler.

* sources/lib/run-time/stack-walker.c
  (dylan_dump_callstack): Handle transfering RISC-V register context
   from the exception user context to a libunwind context.

* sources/registry/riscv64-linux/*: New platform-specific registry
  entries for the riscv64-linux platform.

* sources/system/riscv64-linux-operating-system.dylan: New file
  containing externally-visible platform-specific constant definitions
  for the riscv64-linux platform.

* sources/system/riscv64-linux-magic-numbers.dylan: New generated file
  containin

--- a/sources/jamfiles/Makefile.in
+++ b/sources/jamfiles/Makefile.in
@@ -20,7 +20,8 @@ SCRIPTS         = \
                   $(srcdir)/x86-netbsd-build.jam \
                   $(srcdir)/x86_64-netbsd-build.jam \
                   $(srcdir)/arm-linux-build.jam \
-                  $(srcdir)/aarch64-linux-build.jam
+                  $(srcdir)/aarch64-linux-build.jam \
+                  $(srcdir)/riscv64-linux-build.jam
 
 .PHONY: install
 
