--- a/sources/lib/run-time/Makefile.in
+++ b/sources/lib/run-time/Makefile.in
@@ -66,6 +66,11 @@ else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),aarch64-linux)
     -DOPEN_DYLAN_PLATFORM_LINUX -DOPEN_DYLAN_PLATFORM_UNIX \
     -DOPEN_DYLAN_ARCH_AARCH64
   PLATFORM_LFLAGS=-fPIC
+else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),riscv64-linux)
+  PLATFORM_CFLAGS=-fPIC -D_REENTRANT=1 -D_GNU_SOURCE \
+    -DOPEN_DYLAN_PLATFORM_LINUX -DOPEN_DYLAN_PLATFORM_UNIX \
+    -DOPEN_DYLAN_ARCH_RISCV64
+  PLATFORM_LFLAGS=-fPIC
 else ifeq ($(OPEN_DYLAN_TARGET_PLATFORM),x86-freebsd)
   PLATFORM_CFLAGS=-m32 -fPIC -D_REENTRANT=1 \
     -DOPEN_DYLAN_PLATFORM_FREEBSD -DOPEN_DYLAN_PLATFORM_UNIX \
