Fix libraries-test-suite.yml workflow
* Need to actually checkout the code. D'oh!
* Use "od" directory so it doesn't conflict with "opendylan" symlink
  pointing to the installed release.
* Don't run benchmarks, which could take a long time.

Note that the version of Testworks in OD 2020.1 doesn't return 1 upon failure,
so some other GitHub workflows may not fail when they should.

--- a/.github/workflows/libraries-test-suite.yml
+++ b/.github/workflows/libraries-test-suite.yml
@@ -15,15 +15,19 @@ jobs:
   libraries-test-suite-ubuntu:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          path: od
+          submodules: recursive
 
       - uses: dylan-lang/install-opendylan@v1
 
       - name: Build libraries-test-suite-app
         run: |
           # We want to use the registry in the sources directory...
-          cd opendylan/sources
+          cd od/sources
           ../../dylan-compiler -build -jobs 3 libraries-test-suite-app
 
       - name: Run libraries-test-suite-app
         run: |
-          opendylan/sources/_build/bin/libraries-test-suite-app
+          od/sources/_build/bin/libraries-test-suite-app --tag=-benchmark
