--- a/.github/workflows/libraries-test-suite.yml
+++ b/.github/workflows/libraries-test-suite.yml
@@ -20,7 +20,27 @@ jobs:
           path: od
           submodules: recursive
 
-      - uses: dylan-lang/install-opendylan@v1
+      - uses: dylan-lang/install-opendylan@v2
+
+      - name: Build libraries-test-suite-app
+        run: |
+          # We want to use the registry in the sources directory...
+          cd od/sources
+          ../../dylan-compiler -build -jobs 3 libraries-test-suite-app
+
+      - name: Run libraries-test-suite-app
+        run: |
+          od/sources/_build/bin/libraries-test-suite-app --tag=-benchmark
+
+  libraries-test-suite-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: od
+          submodules: recursive
+
+      - uses: dylan-lang/install-opendylan@v2
 
       - name: Build libraries-test-suite-app
         run: |
