Add dylan-tool to the release
Pull it in as a submodule and add it to the Makefile, plus add a release note.

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "sources/lib/meta"]
 	path = sources/lib/meta
 	url = https://github.com/dylan-lang/meta.git
+[submodule "sources/app/dylan-tool"]
+	path = sources/app/dylan-tool
+	url = https://github.com/dylan-lang/dylan-tool
