Makefile.in: enable 3-stage bootstrap using packages
The bootstrap stage 1 registry is moved to Bootstrap.1/registry since (with
dylan-tool writing LID files with absolute pathnames) it no longer needs to be
in the same directory as the registry in sources/.

dylan-tool-app is built from source first, then the registry is updated using
`dylan update`, then the bootstrap is much the same as always.

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,14 @@
 *.pyc
 *~
 /Makefile
-/aclocal.m4
 /Bootstrap.*/
+/_build/
+/aclocal.m4
 /config.log
 /config.status
 /configure
 /config/build-aux/
 /autom4te*.cache/
-/sources/bootstrap1-registry/
 /sources/corba/scepter/front-end/file/parser.dylan
 /sources/corba/orb/iop-protocol/
 /sources/corba/orb/ir-protocol/
