--- a/.github/workflows/libraries-test-suite.yml
+++ b/.github/workflows/libraries-test-suite.yml
@@ -11,6 +11,8 @@ on:
   # This enables the Run Workflow button on the Actions tab.
   workflow_dispatch:
 
+# TODO: convert to matrix job spec to prevent repetition
+
 jobs:
   libraries-test-suite-ubuntu:
     runs-on: ubuntu-latest
@@ -21,6 +23,9 @@ jobs:
           submodules: recursive
 
       - uses: dylan-lang/install-opendylan@v2
+        with:
+          version: 2022.1
+          tag: v2022.1.0
 
       - name: Build libraries-test-suite-app
         run: |
@@ -41,6 +46,9 @@ jobs:
           submodules: recursive
 
       - uses: dylan-lang/install-opendylan@v2
+        with:
+          version: 2022.1
+          tag: v2022.1.0
 
       - name: Build libraries-test-suite-app
         run: |
