--- a/.github/workflows/libraries-test-suite.yml
+++ b/.github/workflows/libraries-test-suite.yml
@@ -11,34 +11,12 @@ on:
   # This enables the Run Workflow button on the Actions tab.
   workflow_dispatch:
 
-# TODO: convert to matrix job spec to prevent repetition
-
 jobs:
-  libraries-test-suite-ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          path: od
-          submodules: recursive
-
-      - uses: dylan-lang/install-opendylan@v2
-        with:
-          version: 2022.1
-          tag: v2022.1.0
-
-      - name: Build libraries-test-suite-app
-        run: |
-          # We want to use the registry in the sources directory...
-          cd od/sources
-          ../../dylan-compiler -build -jobs 3 libraries-test-suite-app
-
-      - name: Run libraries-test-suite-app
-        run: |
-          od/sources/_build/bin/libraries-test-suite-app --tag=-benchmark
-
-  libraries-test-suite-macos:
-    runs-on: macos-latest
+  libraries-test-suite:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
         with:
