--- a/.github/workflows/libraries-test-suite.yml
+++ b/.github/workflows/libraries-test-suite.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
         with:
