--- a/.github/workflows/libraries-test-suite.yaml
+++ b/.github/workflows/libraries-test-suite.yaml
@@ -23,7 +23,7 @@ jobs:
           path: od
           submodules: recursive
 
-      - uses: dylan-lang/install-opendylan@v2
+      - uses: dylan-lang/install-opendylan@v3
         with:
           version: 2022.1
           tag: v2022.1.0
@@ -32,7 +32,7 @@ jobs:
         run: |
           # We want to use the registry in the sources directory...
           cd od/sources
-          ../../dylan-compiler -build -jobs 3 libraries-test-suite-app
+          dylan-compiler -build -jobs 3 libraries-test-suite-app
 
       - name: Run libraries-test-suite-app
         run: |
