Fix #1426: Automate docs build on change (#1514)
- Modify 'bootstrap.yaml' and 'libraries-test-suite.yaml'. When
  changes are made to the documentation folder, deactivate the build
  and test actions.

- Add 'build-documentation.yml'. Automatically generate documentation
  whenever any file with the extension '.rst' or 'conf.py' is modified
  within the 'documentation' folder. It generates the HTML
  documentation and deploys it to GH pages.

--- a/.github/workflows/libraries-test-suite.yaml
+++ b/.github/workflows/libraries-test-suite.yaml
@@ -3,10 +3,14 @@ name: libraries-test-suite
 on:
   push:
     # all branches
+    paths-ignore:
+      - 'documentation/**'
   pull_request:
     branches:
       - main
       - master
+    paths-ignore:
+      - 'documentation/**'
 
   # This enables the Run Workflow button on the Actions tab.
   workflow_dispatch:
