--- a/.github/workflows/bootstrap.yaml
+++ b/.github/workflows/bootstrap.yaml
@@ -1,6 +1,12 @@
 name: Bootstrap
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - 'documentation/**'
+  pull_request:
+    paths-ignore:
+      - 'documentation/**'
 
 jobs:
   build:
