website: Add "website" repo as a submodule
I tried to figure out how to copy the website repo here, with the git history,
and wasn't able to make it work. The conflicts in files like .gitignore and
README.rst are manageable but I ran into conflicts with git submodules that,
even though I did work through them, I have no confidence in the result being
correct. So here we are.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "sources/app/dylan-tool"]
 	path = sources/app/dylan-tool
 	url = https://github.com/dylan-lang/dylan-tool
+[submodule "documentation/website"]
+	path = documentation/website
+	url = https://github.com/dylan-lang/website
