automation: build-release.yaml: remove Ubuntu so macOS can succeed
When Ubuntu fails the macOS build is cancelled. I want to use the macOS build
so I'm removing Ubuntu for now.

--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [macos-latest]
     steps:
       - uses: actions/checkout@v4
         with:
